--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <p class="dedicatoria">
                     Dedicatória
                     <br>
-                    Ao meu único e indubitável amor, Mahria Clara Bellafronte Lauer  
+                    Ao meu único e indubitável amor, Mahria Clara  
                 </p>
                 <p class="start">
                     Prefácio
