--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         me chamaria de romântico.
                     </p>    
                     <p class="dedicatoria">
-                        Desde que entrei na sala do CELIN (curso que nos fez se conhecer de uma forma um tanto quanto engraçada) estava decidido de que você era a pessoa certa, em um passo de cada vez, eu não pude deixar
+                        Desde que entrei na sala do curso de inglês (curso que nos fez se conhecer de uma forma um tanto quanto engraçada) estava decidido de que você era a pessoa certa, em um passo de cada vez, eu não pude deixar
                         de observar o quão bonita era, e conforme íamos conversando eu pude aprender um pouco sobre como era você por dentro, sempre bem humorada e feliz, com o passar das aulas eu entendia que era uma pessoa perfeita, seus sentimentos
                         de uma forma expressiva se tornavam algo maravilhoso, o interesse e seu Eu, me cativaram, assim como uma rosa, que por mais que houvessem outras, viria a ser única e perfeita. (referência)
                     </p>
